--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 appdirs
 setuptools>=11.3
+configparser
 cryptography>=1.3.4
 lxml>=2.3.2
 imgsize
 Jinja2
 markupsafe
-pyDNS
+py3DNS
 PySocks
 pgpdump
 pillow
